--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+    <title>gittool</title>
     <style>
         html, body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
@@ -241,8 +241,13 @@
         }
 
         async function updateFolderInfo(folder, row) {
+            const info = await getDirInfo(folder);
+            let folderPrettyName = folder
+            if (info && info.git && folder === "-") {
+                folderPrettyName = info.git.name;
+            }
             const cells = row.getElementsByTagName('td');
-            cells[0].textContent = folder;
+            cells[0].textContent = folderPrettyName;
             cells[1].innerHTML = '<span class="spinner"></span>';
             cells[2].innerHTML = '<span class="spinner"></span>';
             cells[3].innerHTML = '<span class="spinner"></span>';
@@ -250,7 +255,6 @@
             cells[5].innerHTML = '<span class="spinner"></span>';
             cells[6].innerHTML = '<span class="spinner"></span>';
 
-            const info = await getDirInfo(folder);
             if (info && info.git) {
                 // Update overall state
                 cells[1].innerHTML = '';
@@ -351,7 +355,6 @@
     </script>
 </head>
 <body>
-    <h1>Git Repositories</h1>
     <table>
         <thead>
             <tr>
